--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "contao/manager-plugin": "^2.0"
   },
   "conflict": {
-    "contao/manager-plugin": "<2.0 || >=3.0"
+    "contao/manager-plugin": "<2.0 || >=3.0",
+    "w3scouts/spotify": "*"
   },
   "autoload": {
     "psr-4": {
