--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "w3scout/contao-spotify-bundle",
-  "description": "Adds a spotify button module",
+  "description": "Provides a frontend spotify button module",
   "keywords":["contao","spotify","music"],
   "type": "contao-bundle",
   "license": "LGPL-3.0+",
